<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#141414"
    android:layout_height="match_parent"
    >



    <LinearLayout
        android:id="@+id/buttonDado"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"


        android:background="@color/black"
        android:elevation="20dp"
        android:orientation="horizontal"
        android:padding="8px">


        <ImageView
            android:id="@+id/imageBack"
            android:layout_width="0dp"

            android:padding="12sp"
            android:scaleType="fitStart"
            android:layout_height="match_parent"

            android:layout_weight="1"
            app:srcCompat="@drawable/boton_back_blanco" />

        <ImageView
            android:id="@+id/imageViewDado"
            android:layout_width="0dp"

            android:layout_height="match_parent"

            android:layout_weight="1"
            app:srcCompat="@drawable/netflix" />
        <TextView
            android:id="@+id/textAyuda"
            android:layout_width="0dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center"
            android:text="Ayuda"
            android:textColor="@color/white"
            android:textSize="15dp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/datos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50sp"
        android:layout_marginRight="50sp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:background="@null"

        android:elevation="20dp"
        android:orientation="vertical"
        android:padding="8px">
        <EditText
            android:id="@+id/editTextTextInicioSesion"
            android:padding="10sp"
            android:textColor="#C4C4C4"
            android:textColorHint="#C4C4C4"
            android:background="@drawable/logeo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/email_numero"/>
        <EditText
            android:id="@+id/editTextpass"
            android:padding="10sp"
            android:layout_marginTop="10sp"
            android:textColorHint="#C4C4C4"
            android:background="@drawable/logeo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/contraseña"/>
        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button"
            android:id="@+id/IniciarSesion"
            android:layout_marginTop="10sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="10dp"
            app:strokeWidth="1dp"
            app:strokeColor="@color/black"
            android:textColor="#C4C4C4"
            android:backgroundTint="#141414"
            android:stateListAnimator="@null"
            android:textAllCaps="false"
            android:text="@string/Iniciar_sesion" />
        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:id="@+id/BotonRecuperarContraseña"
            android:layout_marginTop="10sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:backgroundTint="#E50914"
            android:elevation="10sp"
            android:textColor="#C4C4C4"
            android:background="@null"
            android:stateListAnimator="@null"
            android:textAllCaps="false"
            android:text="@string/recuperar_pass" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp"
        android:layout_alignParentBottom="true"

        android:layout_gravity="center">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#C4C4C4"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:layout_marginTop="10sp"
            android:layout_marginEnd="2dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#C4C4C4"
            android:text="@string/o" />

        <View
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="1dp"
            android:background="#C4C4C4"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10sp"
            android:layout_marginEnd="2dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"

        android:orientation="horizontal"

        android:layout_gravity="center">

        <TextView
            android:id="@+id/notienescuenta"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:textColor="#C4C4C4"
            android:text="@string/no_tienes_cuenta"
            android:layout_marginEnd="16dp"/>

        <Button

            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:id="@+id/registrarse"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#E50914"
            android:background="@null"
            android:text="@string/registrate"
            android:textAllCaps="false"/>
    </LinearLayout>



    </LinearLayout>

</RelativeLayout>
